landing page complete

--- a/index.html
+++ b/index.html
@@ -32,3 +32,43 @@
 		</div>
 	  </nav>
 	</header>
+	<main>
+		<div id="carouselExampleCaptions" class="carousel slide">
+			<div class="carousel-indicators">
+			  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+			  <div class="carousel-item active">
+				<img src="image/students.jpg" height="650px" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h2>Obtain a Student Loan</h2>
+				  <p>Do you ever feel distracted in school due to financial needs? here is an opportunity for you to stay focused with a good financial plan</p>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img src="image/student-loan-nigeria.webp" height="650px" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h2>Open Up a Bright Sky</h2>
+				  <p>Have you ever felt like you're running out of ideas and inspiration in your life? Are you lost and unsure where to go? Allow us to assist you right now.</p>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img src="image/study-slider-3.jpg" height="650px" class="d-block w-100" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h2>Write Your Book</h2>
+				  <p> Not only are your talents improved, but your inner self might also take on a new identity. You are the one who has complete control over your life story.</p>
+				</div>
+			  </div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="visually-hidden">Next</span>
+			</button>
+		  </div>
+	</main>
