--- a/index.html
+++ b/index.html
@@ -71,4 +71,81 @@
 			  <span class="visually-hidden">Next</span>
 			</button>
 		  </div>
+		  <section class="about">
+			<div class="container-md ">
+				<h5 class="text-center" style="color: #BCBAC8;">WELCOME TO STUDENTLOAN</h5>
+				<h3 class="text-center" style="font-weight: 700;">Specialized <span style="color: #1891C8;">Indigenous</span>  Consultancy Group</h3>
+				<P>We are a leading provider of student loans and scholarships for Nigerian students who want to study home and abroad. We offer a variety of financing options at rates that beat any lender in Nigeria, including:</P>
+				<div class="row">
+				<div class="col max-mb-30">
+					<h3 style="font-weight: 700;">Student Loan</h3>
+					<p>We offer flexible and affordable loans to help you cover the cost of tuition, fees, and living expenses. Our rates are lower than any other lender in Nigeria, and we offer repayment terms that can be tailored to your budget.</p>
+				</div>
+				<div class="col max-mb-30">
+					<h3 style="font-weight: 700;">Scholarships</h3>
+					<p>We also offer a variety of scholarships to help you offset the cost of your education. Our scholarships are awarded based on academic merit, financial need, and extracurricular activities.</p>
+				</div>
+				</div>
+				<br>
+				<p>
+					In addition to financing, we also offer a variety of other services to help you with your study abroad journey, including:
+				</p>
+				<ul>
+					<li><span style="font-weight: 700;">Visa and Travel assistance:</span> We can help you with the visa and travel process, so you can focus on your studies.</li>
+					<li><span style="font-weight: 700;">Job placement assistance:</span> We can help you find a job that allows you to study and work in another country.</li>
+					</ul>
+				<p>Applying for scholarships has never been easier with StudyLoan. Our online platform provides a convenient and streamlined process, allowing you to explore and apply for various scholarships that suit your academic profile. Take advantage of this opportunity to secure financial support for your studies.</p>	
+			</div>
+		  </section>
+
+		  <section class="bestuni shapedividers_com-3547">
+			<div class="project">
+				<h2 style="font-weight: 700;"> TOP UNIVERSITY IN <span style="color: #1891C8;">NIGERIA</span></h2>
+				<p style="color: #BCBAC8;">Get a scholarship / Student Loan to study at one of the most prestigious universities in Nigeria.</p>
+				<div class="projects">
+			   <div class="earth_projects">
+				   <div class="text">
+					   <h3 class="project_name">TASUED</h3>
+					   <div class="content">
+						   <p>Welcome to the Nation's Premier University of Education. (1st in Nigeria, 2nd Africa and 8th in the World)</p>
+					   </div>
+					   <a class="button" href="https://tasued.edu.ng/" target="_blank"> Learn more</a>
+				   </div>
+			   </div>
+   
+			   <div class="earth_projects oau">
+				   <div class="text">
+					   <h3 class="project_name">OAU</h3>
+					   <div class="content">
+						   <p>Whatever you want from your University experience, you will find it at Obafemi Awolowo University.</p>
+					   </div>
+					   <a class="button" href="https://oauife.edu.ng/" target="_blank"> Learn more</a>
+				   </div>
+			   </div>
+
+			   <div class="earth_projects unn">
+				   <div class="text">
+					   <h3 class="project_name">UNN</h3>
+					   <div class="content">
+						   <p>To place the University of Nigeria, Nsukka in the forefront of research and development ,innovative ...</p>
+					   </div>
+					   <a class="button" href="https://www.unn.edu.ng/" target="_blank"> Learn more</a>
+				   </div>
+			   </div>
+			   
+				</div>
+				</div>
+
+				<div class="container">
+					<div class="row mb-5 justify-content-center">
+					  <div class="col-md-8 text-center">
+						<h2 class="site-section-heading text-center"></h2>
+						<blockquote class="mb-5">
+							<p class="lead">&ldquo;Student Loan is dedicated to giving African students the chance to learn about and benefit from quality, affordable education around countries.
+								.&rdquo;</p><span ><a href="SL-form.html">apply now</a></span>
+						  </blockquote>
+					  </div>
+					</div>
+				  </div>
+		  </section>
 	</main>
