--- a/index.html
+++ b/index.html
@@ -267,3 +267,13 @@
 		
 	</footer>
 	</main>
+	
+
+	<script>
+		const year = document.getElementById("year")
+		const thisYear = new Date().getFullYear()
+		year.setAttribute("datetime", thisYear)
+		year.textContent = thisYear
+	</script>
+</body>
+</html>
