--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/png" sizes="192x192" href="images/android-chrome-192x192.png">
 </head>
 <body>
 	<header>
@@ -41,21 +42,21 @@
 			</div>
 			<div class="carousel-inner">
 			  <div class="carousel-item active">
-				<img src="image/students.jpg" height="650px" class="d-block w-100" alt="...">
+				<img src="images/students.jpg" height="650px" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h2>Obtain a Student Loan</h2>
 				  <p>Do you ever feel distracted in school due to financial needs? here is an opportunity for you to stay focused with a good financial plan</p>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="image/student-loan-nigeria.webp" height="650px" class="d-block w-100" alt="...">
+				<img src="images/student-loan-nigeria.webp" height="650px" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h2>Open Up a Bright Sky</h2>
 				  <p>Have you ever felt like you're running out of ideas and inspiration in your life? Are you lost and unsure where to go? Allow us to assist you right now.</p>
 				</div>
 			  </div>
 			  <div class="carousel-item">
-				<img src="image/study-slider-3.jpg" height="650px" class="d-block w-100" alt="...">
+				<img src="images/study-slider-3.jpg" height="650px" class="d-block w-100" alt="...">
 				<div class="carousel-caption d-none d-md-block">
 				  <h2>Write Your Book</h2>
 				  <p> Not only are your talents improved, but your inner self might also take on a new identity. You are the one who has complete control over your life story.</p>
@@ -165,7 +166,7 @@
 								<div class="card mb-3" style="max-width: 740px;">
 									<div class="row g-0">
 									  <div class="col-md-5">
-										<img src="image/student1.jpg" class="img-fluid rounded-start" alt="...">
+										<img src="images/student1.jpg" class="img-fluid rounded-start" alt="...">
 									  </div>
 									  <div class="col-md-7">
 										<div class="card-body">
@@ -182,7 +183,7 @@
 								<div class="card mb-3" style="max-width: 740px;">
 									<div class="row g-0">
 									  <div class="col-md-5">
-										<img src="image/student2.jpg" class="img-fluid rounded-start" alt="...">
+										<img src="images/student2.jpg" class="img-fluid rounded-start" alt="...">
 									  </div>
 									  <div class="col-md-7">
 										<div class="card-body">
@@ -199,7 +200,7 @@
 								<div class="card mb-3" style="max-width: 740px;">
 									<div class="row g-0">
 									  <div class="col-md-5">
-										<img src="image/student3.jpg" class="img-fluid rounded-start" alt="...">
+										<img src="images/student3.jpg" class="img-fluid rounded-start" alt="...">
 									  </div>
 									  <div class="col-md-7">
 										<div class="card-body">
@@ -224,7 +225,7 @@
 			<div class="row">
 				<div class="col-md-4">
 					<h5 style="font-weight: 700;">About</h5>
-					<img src="image/logo.png" height="40%" width="40%" alt="logo">
+					<img src="images/logo.png" height="40%" width="40%" alt="logo">
 					<p>We are committed to providing opportunities for African students with access to high-quality, low-cost education in other nations.</p>
 				</div>
 				<div class="col-md-4">
